# email-ingestion

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/skills/architecture-best-practices/: SKILL.md
.agents/skills/best-practices/: SKILL.md
.agents/skills/project-structure/: SKILL.md
.agents/skills/python-best-practices/: SKILL.md
.agents/skills/repository-pattern/: SKILL.md
.agents/skills/test-architect/: SKILL.md
.agents/workflows/: code-review.md  new-feature.md
.claude/commands/: code-review.md  implement-feature.md  plan-feature.md  test.md
_assignment/: assignment.md
docs/: concerns.md  design.md  scaling.md
src/: dedup.py  discovery.py  main.py  models.py  pipeline.py
src/parsers/: __init__.py  base.py  eml_parser.py  html_parser.py  mbox_parser.py  zip_parser.py
src/utils/: file_provider.py  hashing.py  state_store.py  storage_provider.py
tests/: conftest.py  test_dedup.py  test_discovery.py  test_parsers.py  test_pipeline.py
tests/fixtures/: generate_fixtures.py
