[project]
name = "email-ingest"
version = "0.1.0"
description = "Email file ingestion pipeline — discovers, unpacks, deduplicates, and stages email files"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "click>=8.1",
    "simple-term-menu>=1.6",
    "loguru>=0.7",
]

[project.scripts]
email-ingest = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pyzipper>=0.3.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
